10-ingress/02-simple-ingress/02-simple-ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: my-app
            port:
              number: 80

# apply all files: `kubectl apply -f .`

# get ingress: `kubectl get ing` | `kubectl get ingress`

# Ingress expose the service:\
  ## acess the service without in the pod: `curl localhost`
